socket.io connection setting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node js Anlık Mesajlaşma Örneği</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
      <style>
         body{
             color: #e6e8e8;
@@ -70,9 +71,10 @@
 
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/jquery/jquery.min.js"></script>
 
 <script>
-    // kodlarımız burada olacak
+
 </script>
 
 </body>
